k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-test-app
  template:
    metadata:
      labels:
        app: devops-test-app
    spec:
      containers:
        - name: app
          image: mujaddidsi/devops-test-app:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
