k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-test-app
spec:
  type: NodePort
  selector:
    app: devops-test-app
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30007
